--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,7 @@
     padding: 10px;
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
+    cursor: pointer;
 }
 
 .fullWidth {
