--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,6 +17,16 @@
     cursor: pointer;
 }
 
+.loading {
+    margin-top: 100px;
+    text-align: center;
+}
+
+.loadingImage {
+    max-width: 200px;
+    animation: rotation 1s infinite linear;
+}
+
 .fullWidth {
     width: 100%;
 }
@@ -75,6 +85,15 @@
     box-shadow: 0 0 8px #ed9e9e !important;
 }
 
-.topBottomSpacing{
+.topBottomSpacing {
     margin: 5px 0 12px;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
